trying to fix services scrolling on mobile

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -39,7 +39,7 @@
     font-size: 2rem;
     line-height: 2.6rem;
     width: 100%;
-    height: 80%;
+    /* height: 80%; */
     font-family: var(--font-family-ar-2);
     padding: 0 2rem;
     overflow-y: scroll;
